--- a/app/src/main/res/layout/fragment_list_name_add.xml
+++ b/app/src/main/res/layout/fragment_list_name_add.xml
@@ -77,7 +77,8 @@
 
             <Button
                 android:id="@+id/addTitleCancelButton"
-                style="?android:attr/buttonBarButtonStyle"
+                android:background="@drawable/gradient_background_pinot_noir"
+                android:textColor="@color/colorAccent"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
@@ -87,8 +88,9 @@
 
             <Button
                 android:id="@+id/addTitleOkButton"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="0dip"
+                android:background="@drawable/gradient_background_pinot_noir"
+                android:textColor="@color/colorAccent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_weight="1"
