--- a/app/src/main/res/layout/fragment_list_name.xml
+++ b/app/src/main/res/layout/fragment_list_name.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
@@ -8,10 +8,6 @@
              tools:fitsSystemWindows="true">
 
     <!-- TODO: Update blank fragment layout -->
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <!--<LinearLayout-->
         <!--android:layout_width="match_parent"-->
@@ -74,6 +70,22 @@
         <!--</LinearLayout>-->
         <!--</LinearLayout>-->
 
+    <ListView
+        android:id="@+id/listViewList"
+        android:layout_width="0dp"
+        android:layout_height="494dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:divider="#ffffff"
+        android:dividerHeight="1dp" />
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
@@ -87,5 +99,5 @@
             app:srcCompat="@drawable/ic_add"
             tools:ignore="VectorDrawableCompat"/>
 
-    </android.support.constraint.ConstraintLayout>
-</FrameLayout>
+
+</android.support.constraint.ConstraintLayout>
