Add physical press back button

--- a/app/src/main/res/layout/fragment_list_add_price.xml
+++ b/app/src/main/res/layout/fragment_list_add_price.xml
@@ -11,28 +11,22 @@
         android:id="@+id/addGrocery"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:singleLine="true"
         android:textColor="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginBottom="8dp"
         android:textColorHint="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/spinnerStore"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintRight_toRightOf="parent">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/addPrice"
@@ -46,78 +40,48 @@
 
     <Spinner
         android:id="@+id/spinnerStore"
-        android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_width="387dp"
+        android:layout_height="47dp"
+        android:textAlignment="center"
+        android:background="@drawable/gradient_background_royal_blue"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayoutAdd"
+        app:layout_constraintBottom_toTopOf="@+id/addPriceAdd"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>
+        app:layout_constraintRight_toRightOf="parent"/>
 
-    <LinearLayout
-        android:id="@+id/linearLayoutAdd"
-        android:layout_width="0dp"
-        android:layout_height="74dp"
-        android:divider="?android:attr/dividerHorizontal"
-        android:orientation="vertical"
-        android:paddingTop="16dip"
-        android:showDividers="beginning"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/addPriceAdd"
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginBottom="136dp"
+        android:layout_weight="1"
+        android:background="@drawable/gradient_background_royal_blue"
+        android:filterTouchesWhenObscured="true"
+        android:maxLines="2"
+        android:text="@string/add"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            style="?android:attr/buttonBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:measureWithLargestChild="true"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/leftSpacerAdd"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.25"
-                android:orientation="horizontal"
-                android:visibility="gone"/>
-
-            <Button
-                android:id="@+id/addPriceAdd"
-                android:background="@drawable/gradient_background_pinot_noir"
-                android:textColor="@color/colorAccent"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_weight="1"
-                android:filterTouchesWhenObscured="true"
-                android:maxLines="2"
-                android:text="@string/add"/>
-
-            <LinearLayout
-                android:id="@+id/rightSpacerAdd"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.25"
-                android:orientation="horizontal"
-                android:visibility="gone"/>
-
-        </LinearLayout>
-    </LinearLayout>
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="74dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:divider="?android:attr/dividerHorizontal"
         android:orientation="vertical"
         android:paddingTop="16dip"
         android:showDividers="beginning"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             style="?android:attr/buttonBarStyle"
@@ -136,26 +100,26 @@
 
             <Button
                 android:id="@+id/addPricePreviousButton"
-                android:background="@drawable/gradient_background_pinot_noir"
-                android:textColor="@color/colorAccent"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_weight="1"
+                android:background="@drawable/gradient_background_royal_blue"
                 android:maxLines="2"
-                android:text="@string/cancel"/>
+                android:text="@string/cancel"
+                android:textColor="@color/colorAccent"/>
 
             <Button
                 android:id="@+id/addPriceSaveButton"
-                android:background="@drawable/gradient_background_pinot_noir"
-                android:textColor="@color/colorAccent"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_weight="1"
+                android:background="@drawable/gradient_background_royal_blue"
                 android:filterTouchesWhenObscured="true"
                 android:maxLines="2"
-                android:text="@string/save"/>
+                android:text="@string/save"
+                android:textColor="@color/colorAccent"/>
 
             <LinearLayout
                 android:id="@+id/rightSpacer"
@@ -167,5 +131,20 @@
 
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="272dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Enter Item"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintBottom_toTopOf="@+id/addGrocery"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
