--- a/app/src/main/res/layout/fragment_list_name.xml
+++ b/app/src/main/res/layout/fragment_list_name.xml
@@ -72,19 +72,20 @@
 
     <ListView
         android:id="@+id/listViewList"
-        android:layout_width="0dp"
-        android:layout_height="494dp"
+        android:layout_width="385dp"
+        android:layout_height="478dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:divider="#ffffff"
+        android:dividerHeight="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:divider="#ffffff"
-        android:dividerHeight="1dp" />
+        app:layout_constraintVertical_bias="1.0"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
