--- a/app/src/main/res/layout/fragment_list_details.xml
+++ b/app/src/main/res/layout/fragment_list_details.xml
@@ -1,21 +1,33 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
+              android:orientation="vertical"
              android:layout_height="match_parent"
              tools:context="com.kavsoftware.kaveer.shoppinglistcompare.Fragment.ListDetailsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <ExpandableListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/expandableListView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:divider="#ffffff"
-        android:childDivider="#ffffff"
-        android:dividerHeight="1dp"
-        android:textColor="#ffffff"
-        android:layout_marginTop="20dp"/>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ExpandableListView
+                android:id="@+id/expandableListView"
+                android:layout_width="374dp"
+                android:layout_height="474dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="20dp"
+                android:childDivider="#ffffff"
+                android:divider="#ffffff"
+                android:dividerHeight="1dp"
+                android:textColor="#ffffff"/>
+        </TableRow>
+
+    </TableLayout>
+
+</LinearLayout>
